// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TruncatedError Basic rendering renders an empty error string 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 6,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={1}
    onTextLayout={[Function]}
    style={
      [
        {
          "color": "#ca3542",
          "fontFamily": "Geist-Regular",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        [
          {
            "flexShrink": 1,
          },
          {
            "opacity": 0,
          },
        ],
      ]
    }
  />
  <TouchableOpacity
    accessibilityLabel="View error details"
    accessibilityRole="button"
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
  >
    <SvgMock
      fill="currentColor"
      name="Info"
      style={
        [
          {
            "color": "#ca3542",
            "height": 16,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`TruncatedError Basic rendering renders correctly and matches snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 6,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={1}
    onTextLayout={[Function]}
    style={
      [
        {
          "color": "#ca3542",
          "fontFamily": "Geist-Regular",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        [
          {
            "flexShrink": 1,
          },
          {
            "opacity": 0,
          },
        ],
      ]
    }
  >
    This is a test error message
  </Text>
  <TouchableOpacity
    accessibilityLabel="View error details"
    accessibilityRole="button"
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
  >
    <SvgMock
      fill="currentColor"
      name="Info"
      style={
        [
          {
            "color": "#ca3542",
            "height": 16,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`TruncatedError Basic rendering renders with custom maxLines prop 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 6,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={3}
    onTextLayout={[Function]}
    style={
      [
        {
          "color": "#ca3542",
          "fontFamily": "Geist-Regular",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        [
          {
            "flexShrink": 1,
          },
          {
            "opacity": 0,
          },
        ],
      ]
    }
  >
    This is a test error message
  </Text>
  <TouchableOpacity
    accessibilityLabel="View error details"
    accessibilityRole="button"
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
  >
    <SvgMock
      fill="currentColor"
      name="Info"
      style={
        [
          {
            "color": "#ca3542",
            "height": 16,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`TruncatedError Info icon visibility displays the error text after measurement confirms it fits 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 6,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={1}
    onTextLayout={[Function]}
    style={
      [
        {
          "color": "#ca3542",
          "fontFamily": "Geist-Regular",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        [
          {
            "flexShrink": 1,
          },
          false,
        ],
      ]
    }
  >
    Short error message
  </Text>
  <TouchableOpacity
    accessibilityLabel="View error details"
    accessibilityRole="button"
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
  >
    <SvgMock
      fill="currentColor"
      name="Info"
      style={
        [
          {
            "color": "#ca3542",
            "height": 16,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`TruncatedError Truncation behavior shows fallback text when error is truncated 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 6,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={1}
    onTextLayout={[Function]}
    style={
      [
        {
          "color": "#ca3542",
          "fontFamily": "Geist-Regular",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        [
          {
            "flexShrink": 1,
          },
          false,
        ],
      ]
    }
  >
    We've encountered an error
  </Text>
  <TouchableOpacity
    accessibilityLabel="View error details"
    accessibilityRole="button"
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
  >
    <SvgMock
      fill="currentColor"
      name="Info"
      style={
        [
          {
            "color": "#ca3542",
            "height": 16,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
</View>
`;
